--- a/src/styles.css
+++ b/src/styles.css
@@ -14,69 +14,86 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.container {
+body {
+  box-sizing: border-box;
   margin: 0;
-  padding-top: 10vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  background: #222222;
+  border: 2px solid #2A60B7;
+  padding: 17px;
+  padding-top: 5px;
+  height: 100vh;
+}
+
+.container {
+  padding: 0px;
+  color: #EEEEEE;
+  background: #1111;
+}
+
+.container h1 {
   text-align: center;
+  font-weight: 300;
+  font-size: 18px;
+  margin: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: 0.75s;
-}
-
-.logo.tauri:hover {
-  filter: drop-shadow(0 0 2em #24c8db);
-}
-
-.row {
+.panels_container {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  gap: 20px;
+  margin-top: 5px;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.panels_container .left_panel {
+  min-width: 70%;
+  min-height: 80vh;
+  flex: 1;
 }
 
-a:hover {
-  color: #535bf2;
+.panels_container .right_panel {
+  width: 25%;
+  max-width: 300px;
+  height: 100%;
+  min-height: 100%;
 }
 
-h1 {
-  text-align: center;
-}
-
-input,
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+input {
+  border: 1px solid #3C3B3B;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
-  color: #0f0f0f;
-  background-color: #ffffff;
+  color: #999999;
+  background-color: #090808;
   transition: border-color 0.25s;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+button {
+  background: #4183F5;
+  border: 1px solid #2973F4;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  color: #E1FFFF;
+  transition: background-color 0.25s;
+}
+
+button:hover {
+  background: #2973F4;
 }
 
 button {
   cursor: pointer;
 }
 
-button:hover {
-  border-color: #396cd8;
-}
 button:active {
-  border-color: #396cd8;
-  background-color: #e8e8e8;
+  background-color: #0B55D4;
+  border-color: #083C95;
+}
+
+input:focus {
+  border-color: #A2C2FA;
 }
 
 input,
@@ -86,24 +103,4 @@ button {
 
 #greet-input {
   margin-right: 5px;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: #f6f6f6;
-    background-color: #2f2f2f;
-  }
-
-  a:hover {
-    color: #24c8db;
-  }
-
-  input,
-  button {
-    color: #ffffff;
-    background-color: #0f0f0f98;
-  }
-  button:active {
-    background-color: #0f0f0f69;
-  }
 }
