--- a/src/styles.css
+++ b/src/styles.css
@@ -44,11 +44,12 @@ body {
   align-items: center;
   gap: 20px;
   margin-top: 5px;
+  overflow: hidden;
 }
 
 .panels_container .left_panel {
   min-width: 70%;
-  min-height: 80vh;
+  height: 80vh;
   flex: 1;
 }
 
@@ -56,7 +57,16 @@ body {
   width: 25%;
   max-width: 300px;
   height: 100%;
-  min-height: 100%;
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
+
+.panels_container .right_panel img {
+  margin: 5px;
+  max-width: 90%
 }
 
 input {
